New main front end interface

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
-    "compilerOptions": {
-        "module": "ESNext",
-        "target": "ESNext",
-    }
+    "exclude": [
+        "projects/**"
+    ]
 }
